fixing google translate contrast

--- a/client/maps/maps_stylesheet.css
+++ b/client/maps/maps_stylesheet.css
@@ -123,3 +123,11 @@ iframe{
     width: 80%;
     height: 500px;
 }
+
+.goog-logo-link {
+    display:none !important;
+} 
+    
+.goog-te-gadget{
+    color: transparent !important;
+}
